--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "portfolio-website",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-}
-,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Shourya31Gupta/Portfolio-Website.git"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Shourya31Gupta/Portfolio-Website/issues"
+  "dependencies": {
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.276.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
+    "shadcn/ui": "^1.0.0"
   },
-  "homepage": "https://github.com/Shourya31Gupta/Portfolio-Website#readme",
   "devDependencies": {
-    "vite": "^7.0.5"
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.4.9"
   }
 }
