--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.0.7",
+    "axios": "^1.10.0",
     "classnames": "^2.3.2",
     "lucide-react": "^0.325.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.7.0",
     "tailwind-variants": "^0.0.6"
   },
   "devDependencies": {
