--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "backend",
+  "name": "portfolio-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "firebase-admin": "^13.4.0",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.16.4"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.3.1"
   }
 }
